--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
@@ -27,7 +27,7 @@
         <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="55px"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/super_driver"
