--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -8,15 +8,20 @@
     android:visibility="visible"
     android:layout_marginTop="@dimen/top_bar_height"
     >
-    
+    <RelativeLayout
+        android:id="@+id/relativeLayoutBanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40px"
+        android:layout_marginLeft="15px"
+        android:layout_marginRight="15px">
+
     <RelativeLayout
         android:id="@+id/relativeLayoutLastRideEarning"
         android:layout_width="match_parent"
         android:layout_height="135px"
-        android:layout_marginTop="40px"
-        android:layout_marginLeft="15px"
-        android:layout_marginRight="15px"
         android:gravity="center_vertical"
+        android:visibility="visible"
         android:background="@drawable/background_white_rounded_orange_bordered">
 
         <TextView
@@ -48,12 +53,32 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/relativeLayoutCancelRide"
+        android:layout_width="match_parent"
+        android:layout_height="95px"
+        android:gravity="center_vertical"
+        android:visibility="gone"
+        android:background="@drawable/background_white_rounded_orange_bordered">
+
+        <TextView
+            android:id="@+id/textViewCancellationMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel_ride_by_customer"
+            android:layout_centerHorizontal="true"
+            android:textSize="32px"/>
+
+    </RelativeLayout>
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/driverInformationBtn"
         android:layout_width="80px"
         android:layout_height="80px"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/relativeLayoutLastRideEarning"
+        android:layout_below="@+id/relativeLayoutBanner"
         android:layout_marginTop="24px"
         android:layout_marginRight="36px"
         android:background="@drawable/icon_i"
