--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -278,7 +278,7 @@
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/paymentText"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="44px"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/Payments"
@@ -376,7 +376,7 @@
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewSuperDrivers"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="44px"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/super_driver"
