--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_delivery_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_delivery_details.xml
@@ -392,58 +392,187 @@
                 android:layout_height="wrap_content">
 
 
-                <TextView
-                    android:id="@+id/textViewCustomerPaid"
-                    android:layout_width="345px"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5px"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="@string/rupee_zero"
-                    android:textColor="@color/grey_ride_history"
-                    android:textSize="52px"/>
-                <TextView
-                    android:id="@+id/textViewCustomerPaidText"
-                    android:layout_width="345px"
-                    android:layout_height="40px"
-                    android:layout_marginBottom="5px"
-                    android:gravity="center"
-                    android:layout_below="@+id/textViewCustomerPaid"
-                    android:text="@string/paid_cash"
-                    android:textColor="@color/grey_ride_history"
-                    android:textSize="30px"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="116px"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="2px"
-                    android:layout_height="125px"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/imageViewVertical"
-                    android:background="@color/new_orange"/>
+                    <RelativeLayout
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center">
 
-                <TextView
-                    android:id="@+id/textViewAccountBalance"
-                    android:layout_width="345px"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:layout_marginTop="5px"
-                    android:layout_toRightOf="@+id/imageViewVertical"
-                    android:text="@string/rupee_zero"
-                    android:textColor="@color/grey_ride_history"
-                    android:textSize="52px"/>
+                        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                            android:id="@+id/textViewCustomerPaid"
+                            android:layout_width="230px"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:singleLine="true"
+                            android:text="@string/rupee_zero"
+                            android:textColor="@color/grey_ride_history"
+                            android:textSize="52px"/>
 
-                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/textViewAccountBalanceText"
-                    android:layout_width="345px"
-                    android:layout_height="40px"
-                    android:layout_below="@+id/textViewAccountBalance"
-                    android:layout_toRightOf="@+id/imageViewVertical"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="@string/account"
-                    android:textColor="@color/grey_ride_history"
-                    android:textSize="30px"/>
+                        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                            android:id="@+id/textViewCustomerPaidText"
+                            android:layout_width="230px"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/textViewCustomerPaid"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="@string/paid_cash"
+                            android:textColor="@color/grey_ride_history"
+                            android:textSize="30px"/>
+
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:layout_width="2px"
+                        android:layout_height="125px"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:id="@+id/imageViewVertical"
+                        android:background="@color/new_orange"/>
+
+                    <RelativeLayout
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                            android:id="@+id/textViewAccountBalance"
+                            android:layout_width="230px"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="@string/rupee_zero"
+                            android:textColor="@color/grey_ride_history"
+                            android:textSize="52px"/>
+
+                        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                            android:id="@+id/textViewAccountBalanceText"
+                            android:layout_width="230px"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/textViewAccountBalance"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="@string/account"
+                            android:textColor="@color/grey_ride_history"
+                            android:textSize="30px"/>
+
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:id="@+id/imageViewHorizontal4"
+                        android:layout_width="2px"
+                        android:layout_height="125px"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ring_orange_dark"/>
+
+                    <!--<RelativeLayout-->
+                        <!--android:id="@+id/relativeLayoutJugnooCut"-->
+                        <!--android:layout_width="0px"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:layout_weight="1"-->
+                        <!--android:gravity="center">-->
+
+                        <!--<product.clicklabs.jugnoo.driver.utils.CustomTextVeiw-->
+                            <!--android:id="@+id/textViewJugnooCutValue"-->
+                            <!--android:layout_width="230px"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_gravity="center_vertical"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="@string/rupee_zero"-->
+                            <!--android:textColor="@color/grey_ride_history"-->
+                            <!--android:textSize="52px"/>-->
+
+
+                        <!--<product.clicklabs.jugnoo.driver.utils.CustomTextVeiw-->
+                            <!--android:id="@+id/textViewJugnooCut"-->
+                            <!--android:layout_width="230px"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_below="@+id/textViewJugnooCutValue"-->
+                            <!--android:layout_gravity="center_vertical"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:gravity="center"-->
+                            <!--android:singleLine="true"-->
+                            <!--android:text="@string/jugnoo_cut"-->
+                            <!--android:textColor="@color/grey_ride_history"-->
+                            <!--android:textSize="30px"/>-->
+
+                    <!--</RelativeLayout>-->
+
+                </LinearLayout>
+
+
+                <!--<TextView-->
+                    <!--android:id="@+id/textViewCustomerPaid"-->
+                    <!--android:layout_width="345px"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="5px"-->
+                    <!--android:gravity="center"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:text="@string/rupee_zero"-->
+                    <!--android:textColor="@color/grey_ride_history"-->
+                    <!--android:textSize="52px"/>-->
+                <!--<TextView-->
+                    <!--android:id="@+id/textViewCustomerPaidText"-->
+                    <!--android:layout_width="345px"-->
+                    <!--android:layout_height="40px"-->
+                    <!--android:layout_marginBottom="5px"-->
+                    <!--android:gravity="center"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:layout_below="@+id/textViewCustomerPaid"-->
+                    <!--android:text="@string/paid_cash"-->
+                    <!--android:textColor="@color/grey_ride_history"-->
+                    <!--android:textSize="30px"/>-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="2px"-->
+                    <!--android:layout_height="125px"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:layout_centerHorizontal="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:id="@+id/imageViewVertical"-->
+                    <!--android:background="@color/new_orange"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/textViewAccountBalance"-->
+                    <!--android:layout_width="345px"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:gravity="center"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:layout_marginTop="5px"-->
+                    <!--android:layout_toRightOf="@+id/imageViewVertical"-->
+                    <!--android:text="@string/rupee_zero"-->
+                    <!--android:textColor="@color/grey_ride_history"-->
+                    <!--android:textSize="52px"/>-->
+
+                <!--<product.clicklabs.jugnoo.driver.utils.CustomTextVeiw-->
+                    <!--android:id="@+id/textViewAccountBalanceText"-->
+                    <!--android:layout_width="345px"-->
+                    <!--android:layout_height="40px"-->
+                    <!--android:layout_below="@+id/textViewAccountBalance"-->
+                    <!--android:layout_toRightOf="@+id/imageViewVertical"-->
+                    <!--android:gravity="center"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:text="@string/account"-->
+                    <!--android:textColor="@color/grey_ride_history"-->
+                    <!--android:textSize="30px"/>-->
 
 
 
