--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="40px"
+        android:layout_marginBottom="45px"
         android:layout_marginLeft="36px"
         android:layout_marginRight="36px"
         android:layout_alignParentBottom="true">
@@ -43,9 +43,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/high_demand_areas"
-                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
                 android:textSize="28px"/>
 
+            <ImageView
+                android:layout_width="40px"
+                android:layout_height="40px"
+                android:layout_marginRight="15px"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/arrow_icon_normal"/>
+            
         </RelativeLayout>
 
     </LinearLayout>
