--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25px"
+        android:visibility="gone"
         android:layout_marginBottom="30px"
         >
 
