--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:id="@+id/relative"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -34,6 +35,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/relativeLayoutPayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="28px"
@@ -55,6 +57,51 @@
             android:textSize="28px"/>
 
         <ImageView
+            android:layout_width="32px"
+            android:layout_height="32px"
+            android:layout_marginRight="24px"
+            android:layout_centerVertical="true"
+            android:src="@drawable/arrow_icon_normal"
+            android:layout_alignParentRight="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativelayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24px">
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="400px" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28px">
+
+        <ImageView
+            android:id="@+id/imageViewPrev"
+            android:layout_width="32px"
+            android:layout_height="32px"
+            android:layout_marginLeft="24px"
+            android:layout_centerVertical="true"
+            android:rotation="180"
+            android:src="@drawable/arrow_icon_normal"/>
+
+        <TextView
+            android:id="@+id/textViewInvPeriod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/this_week_cap"
+            android:textSize="28px"/>
+
+        <ImageView
+            android:id="@+id/imageViewNext"
             android:layout_width="32px"
             android:layout_height="32px"
             android:layout_marginRight="24px"
