--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/relative"
+<RelativeLayout android:id="@+id/relative"
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -10,7 +10,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:background="@color/menu_black"
+        android:background="@color/blue_black_v2"
         android:splitMotionEvents="false">
 
         <Button
@@ -28,13 +28,14 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/earnings"
-            android:textColor="@color/white"
+            android:textColor="@drawable/orange_gradient"
             android:textSize="48px"/>
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/topRl"
         >
 
         <LinearLayout
@@ -42,6 +43,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/blue_black_v2"
+                android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/relativeLayoutPayout"
@@ -55,6 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/estimated_payout"
+                    android:textColor="@color/white"
                     android:textSize="36px"/>
 
                 <TextView
@@ -63,6 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewEstPayout"
                     android:text="@string/this_week_cap"
+                    android:textColor="@color/white"
                     android:textSize="28px"/>
 
                 <TextView
@@ -70,6 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:textColor="@color/white"
                     android:layout_marginRight="18px"
                     android:layout_toLeftOf="@+id/arrow"
                     android:text="Rs. NA"
@@ -77,17 +86,18 @@
 
                 <ImageView
                     android:id="@+id/arrow"
-                    android:layout_width="32px"
-                    android:layout_height="32px"
+                    android:layout_width="15px"
+                    android:layout_height="10px"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="24px"
-                    android:src="@drawable/arrow_icon_normal"/>
+                    android:src="@drawable/arrow_right_white"/>
 
             </RelativeLayout>
 
+
             <RelativeLayout
-                android:id="@+id/relativelayout"
+                android:id="@+id/relativelayoutChart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="24px">
@@ -96,11 +106,22 @@
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
                     android:layout_height="400px"/>
+
+                <RelativeLayout
+                    android:id="@+id/relativelayoutRandom"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/new_orange">
+
+                </RelativeLayout>
+
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="32px"
                 android:layout_marginTop="28px">
 
                 <ImageView
@@ -118,6 +139,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:text="@string/this_week_cap"
+                    android:textColor="@color/white"
                     android:textSize="32px"/>
 
                 <ImageView
@@ -131,11 +153,12 @@
 
             </RelativeLayout>
 
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="680px"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="24px"
                 android:orientation="vertical">
 
                 <ImageView
@@ -156,6 +179,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12px"
                         android:text="day, date"
+                        android:textColor="@color/grey_black_v2"
                         android:textSize="32px"/>
 
                     <TextView
@@ -165,6 +189,7 @@
                         android:layout_marginRight="18px"
                         android:layout_toLeftOf="@+id/arrow1"
                         android:text="Rs. NA"
+                        android:textColor="@color/grey_black_v2"
                         android:textSize="32px"/>
 
                     <ImageView
@@ -181,13 +206,14 @@
                     android:id="@+id/relativeLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24px">
+                    android:layout_marginTop="36px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12px"
+                        android:textColor="@color/grey_black_v2"
                         android:text="day, date"
                         android:textSize="32px"/>
 
@@ -196,6 +222,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="18px"
+                        android:textColor="@color/grey_black_v2"
                         android:layout_toLeftOf="@+id/arrow2"
                         android:text="Rs. NA"
                         android:textSize="32px"/>
@@ -214,13 +241,14 @@
                     android:id="@+id/relativeLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24px">
+                    android:layout_marginTop="36px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12px"
+                        android:textColor="@color/grey_black_v2"
                         android:text="day, date"
                         android:textSize="32px"/>
 
@@ -230,6 +258,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="18px"
                         android:layout_toLeftOf="@+id/arrow3"
+                        android:textColor="@color/grey_black_v2"
                         android:text="Rs. NA"
                         android:textSize="32px"/>
 
@@ -247,13 +276,14 @@
                     android:id="@+id/relativeLayout4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24px">
+                    android:layout_marginTop="36px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12px"
+                        android:textColor="@color/grey_black_v2"
                         android:text="day, date"
                         android:textSize="32px"/>
 
@@ -262,6 +292,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="18px"
+                        android:textColor="@color/grey_black_v2"
                         android:layout_toLeftOf="@+id/arrow4"
                         android:text="Rs. NA"
                         android:textSize="32px"/>
@@ -287,6 +318,7 @@
                         android:id="@+id/textViewDayDateVal5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/grey_black_v2"
                         android:layout_marginLeft="12px"
                         android:text="day, date"
                         android:textSize="32px"/>
@@ -295,6 +327,7 @@
                         android:id="@+id/textViewDailyValue5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/grey_black_v2"
                         android:layout_marginRight="18px"
                         android:layout_toLeftOf="@+id/arrow5"
                         android:text="Rs. NA"
@@ -332,6 +365,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12px"
+                    android:textColor="@color/grey_black_v2"
                     android:text="@string/ride_history_cap"
                     android:textSize="32px"/>
 
@@ -349,4 +383,4 @@
     </ScrollView>
 
 
-</LinearLayout>
+</RelativeLayout>
