--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/graph_marker.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/graph_marker.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_width="150px"
+                android:layout_height="32dp"
                 android:background="@drawable/background_grey_rounded_grey_bordered">
 
 
         <TextView
             android:id="@+id/tvContent"
-            android:layout_width="150px"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:gravity="center"
-            android:text=""
+            android:text="100"
             android:textSize="12dp"
             android:textColor="@android:color/white"
             android:ellipsize="end"
@@ -21,11 +20,11 @@
 
         <ImageView
             android:id="@+id/arrow"
-            android:layout_width="32px"
-            android:layout_height="32px"
+            android:layout_width="24px"
+            android:layout_height="24px"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="24px"
+            android:layout_marginRight="12px"
             android:src="@drawable/arrow_icon_normal"/>
 
 
