--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -14,6 +14,7 @@
    
    <color name="black_text_shop">#1C1C1C</color>
     <color name="nl_white_dark">#E0E0E0</color>
+    <color name="white_grey_v2">#e2e2e2</color>
     <color name="transparent_white">#50FFFFFF</color>
    
    <color name="white_translucent">#D8FFFFFF</color>
@@ -65,7 +66,7 @@
 
     <color name="blue_dark_btn">#3B5999</color>
     <color name="blue_dark_btn_pressed">#1B3979</color>
-    
+    <color name="blue_black_v2">#3f3f4e</color>
     
     
     <color name="red_btn">#8E8E8E</color>
@@ -87,7 +88,7 @@
     <color name="yellow_status">#F89414</color>    
     <color name="green_status">#2EA058</color>    
     <color name="red_status">#F53C37</color>
-    
+    <color name="red_v2">#ff8162</color>
     
     <color name="orange_text">#FBBC12</color>
     
@@ -97,18 +98,24 @@
     <color name="orange_dark">#F96f01</color>
     
     <color name="black_text">#242424</color>
+    <color name="black_text_v2">#595968</color>
     <color name="black_text_alpha">#99242424</color>
     
      <color name="grey_light_more">#BBBBBB</color>
     <color name="grey_light">#DDDDDD</color>
     <color name="grey_light_alpha">#99DDDDDD</color>
+    <color name="grey_light_v2">#bcbcbc</color>
     <color name="grey_dark_less">#A3A3A3</color>
     <color name="grey_dark">#838383</color>
     <color name="grey_dark_button">#54585D</color>
     <color name="grey_dark_more">#5D5D5D</color>
     <color name="grey_black">#232323</color>
+    <color name="grey_black_v2">#6e6a70</color>
     <color name="grey_black_light">#3E3E3E</color>
-  <color name="grey_ride_history">#6D6e71</color>
+    <color name="grey_ride_history">#6D6e71</color>
+
+    <color name="gradient_orange_v2">#ff8162</color>
+    <color name="gradient_yellow_v2">#f8b542</color>
 
     
     
