--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    android:background="@color/white">
+              android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="700px"
+        android:layout_height="match_parent"
         android:visibility="visible"
+        android:layout_gravity="center_horizontal"
         android:scrollbars="vertical"
         android:fadeScrollbars="true"
         />
